--- a/.github/workflows/blog-post-workflow.yml
+++ b/.github/workflows/blog-post-workflow.yml
@@ -13,4 +13,4 @@ jobs:
       - uses: actions/checkout@v2.3.4
       - uses: gautamkrishnar/blog-post-workflow@master
         with:
-          feed_list: "https://jugalkishore.me/posts/index.xml"
+          feed_list: "https://crazyuploader.github.io/posts/index.xml"
